# softwaerie

./: LICENSE  README.md  app.py  main.py  pyproject.toml  requirements.txt
app/: actions.py  config.py  db.py  main.py  models.py  schemas.py
db/: config.py
db/dals/: book.py
db/models/: book.py
